# ruuvi.esp_wrappers.c

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: code-style.yml  google-tests.yml
include/: app_malloc.h  app_str.h  attribs.h  esp_type_wrapper.h  log.h  mac_addr.h  os_malloc.h  os_mkgmtime.h  os_mutex.h  os_mutex_recursive.h  os_rw_lock.h  os_sema.h  os_signal.h  os_str.h  os_task.h  os_time.h  os_timer.h  os_timer_sig.h  os_wrapper_types.h  snprintf_with_esp_err_desc.h  str_buf.h  time_units.h  wrap_esp_err_to_name_r.h
scripts/: clang_format_all.sh  clang_format_all_check.sh
src/: app_str.c  log_dump.c  mac_addr.c  os_malloc.c  os_mkgmtime.c  os_mutex.c  os_mutex_recursive.c  os_rw_lock.c  os_sema.c  os_signal.c  os_str.c  os_task.c  os_task_delay.c  os_time.c  os_timer.c  os_timer_sig.c  snprintf_with_esp_err_desc.c  str_buf.c  wrap_esp_err_to_name_r.c
tests/: CMakeLists.txt
tests/common/: CMakeLists.txt  esp_log_wrapper.cpp
tests/common/include/: TQueue.hpp  esp_err.h  esp_log.h  esp_log_test.h  esp_log_wrapper.hpp
tests/test_app_malloc/: CMakeLists.txt
tests/test_app_str/: CMakeLists.txt  test_app_strtol.cpp  test_app_strtoul.cpp
tests/test_log_dump/: CMakeLists.txt  test_log_dump.cpp
tests/test_mac_addr/: CMakeLists.txt  test_mac_addr.cpp
tests/test_os_malloc/: CMakeLists.txt  test_os_malloc.cpp
tests/test_os_mkgmtime/: CMakeLists.txt  test_os_mkgmtime.cpp
tests/test_os_mutex/: CMakeLists.txt  test_os_mutex.cpp
tests/test_os_mutex_recursive/: CMakeLists.txt  test_os_mutex_recursive.cpp
tests/test_os_rw_lock/: CMakeLists.txt  test_os_rw_lock.cpp
tests/test_os_sema/: CMakeLists.txt  test_os_sema.cpp
tests/test_os_signal_freertos/: CMakeLists.txt  test_events.hpp  test_os_signal_freertos.cpp
tests/test_os_str/: CMakeLists.txt  test_os_str_to_int32.cpp  test_os_str_to_uint32.cpp
tests/test_os_task/: CMakeLists.txt  stubs.cpp  test_os_task.cpp  test_os_task.hpp  test_os_task_create.cpp  test_os_task_create_finite.cpp  test_os_task_create_finite_with_const_param.cpp  test_os_task_create_finite_without_param.cpp  test_os_task_create_static.cpp  test_os_task_create_static_finite.cpp  test_os_task_create_static_finite_with_const_param.cpp  test_os_task_create_static_finite_without_param.cpp  test_os_task_create_static_with_const_param.cpp  test_os_task_create_static_without_param.cpp  test_os_task_create_with_const_param.cpp  test_os_task_create_without_param.cpp
tests/test_os_task_freertos/: CMakeLists.txt  test_os_task_freertos.cpp
tests/test_os_timer_freertos/: CMakeLists.txt  test_os_timer_freertos.cpp
tests/test_os_timer_sig_freertos/: CMakeLists.txt  test_events.hpp  test_os_timer_sig_freertos.cpp
tests/test_snprintf_with_esp_err_desc/: CMakeLists.txt  test_snprintf_with_esp_err_desc.cpp
tests/test_str_buf/: CMakeLists.txt  test_str_buf.cpp
tests/test_time_units/: CMakeLists.txt
